Fixes fa-stack alignment Added failing test case Closes #2213

--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -195,6 +195,7 @@
 .fa-stack-1x,
 .fa-stack-2x {
   position: absolute;
+  left: 0;
   width: 100%;
   text-align: center;
 }
